--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,5 +20,7 @@
             {% include "partials/_header.html.twig" %}
         {% endblock %}
         {% block body %}{% endblock %}
+            {% include "partials/_body.html.twig" %}
+            {% include "partials/_footer.html.twig" %}
     </body>
 </html>
