--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,16 +1,38 @@
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="#" _msthash="1495221" _msttexthash="349570">Barre de navigation</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation" _msthidden="A" _msthiddenattr="1383824" _mstaria-label="320099">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Accueil
-          <span class="sr-only">(current)</span>
+        <a class="nav-link" href="#"><font _mstmutation="1" _msthash="622544" _msttexthash="111306">Domicile </font><span class="sr-only" _msthash="913744" _msttexthash="122200">(current)</span>
         </a>
       </li>
-     
+      <li class="nav-item">
+        <a class="nav-link" href="#" _msthash="622726" _msttexthash="326092">Fonctionnalités</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" _msthash="622908" _msttexthash="95446">Prisée</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" _msthash="623090" _msttexthash="97383">Environ</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" _msthash="623272" _msttexthash="313989">Liste déroulante</a>
+        <div class="dropdown-menu" _msthidden="4">
+          <a class="dropdown-item" href="#" _msthash="872430" _msttexthash="76466" _msthidden="1">Action</a>
+          <a class="dropdown-item" href="#" _msthash="872547" _msttexthash="232752" _msthidden="1">Another action</a>
+          <a class="dropdown-item" href="#" _msthash="872664" _msttexthash="349791" _msthidden="1">Something else here</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#" _msthash="872898" _msttexthash="230529" _msthidden="1">Separated link</a>
+        </div>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Rechercher" _mstplaceholder="154362">
+      <button class="btn btn-secondary my-2 my-sm-0" type="submit" _msthash="730886" _msttexthash="154362">Rechercher</button>
+    </form>
   </div>
 </nav>
